feat: host list & caller wiring
