# db/src/models.rs
@@ -1,13 +1,13 @@
 use std::fmt::Display;
 
+use bson::serde_helpers::datetime::FromChrono04DateTime;
 use chrono::{DateTime, Utc};
 use lucid_common::{
     caller::{Caller, Role},
-    views::User,
+    views::{Host, User},
 };
 use mongodb::bson::oid::ObjectId;
 use serde::{Deserialize, Serialize};
-use bson::serde_helpers::datetime::FromChrono04DateTime;
 
 #[derive(Debug, Clone, Serialize, Deserialize)]
 pub struct DbUser {
@@ -94,4 +94,62 @@ pub struct DbSession {
     /// Last time the session was used (for activity tracking)
     #[serde(with = "FromChrono04DateTime")]
     pub last_used_at: DateTime<Utc>,
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize)]
+pub struct DbHost {
+    #[serde(rename = "_id", skip_serializing_if = "Option::is_none")]
+    pub id: Option<ObjectId>,
+
+    /// The hostname or IP address of the host
+    pub hostname: String,
+
+    /// The CPU architecture of the host (e.g., "x86_64", "arm64")
+    pub architecture: String,
+
+    /// The operating system information of the host
+    pub operating_system: OperatingSystem,
+
+    /// When the host was last updated manually
+    #[serde(with = "FromChrono04DateTime")]
+    pub updated_at: DateTime<Utc>,
+
+    /// Last time the host reported in
+    #[serde(with = "FromChrono04DateTime")]
+    pub last_seen_at: DateTime<Utc>,
+}
+
+impl From<DbHost> for Host {
+    fn from(value: DbHost) -> Self {
+        Self {
+            id: value
+                .id
+                .map(|oid| oid.to_string())
+                .unwrap_or_else(|| "unknown".into()),
+            hostname: value.hostname.clone(),
+            os_id: value.operating_system.id.clone(),
+            os_name: value.operating_system.name.clone(),
+            os_version: value.operating_system.version.clone(),
+            architecture: value.architecture.clone(),
+            created_at: value
+                .id
+                .map(|oid| oid.timestamp().to_system_time().into())
+                .unwrap_or_else(|| Utc::now()),
+            updated_at: value.updated_at,
+            last_seen_at: value.last_seen_at,
+            ifaces: vec![],
+        }
+    }
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize)]
+pub struct OperatingSystem {
+    /// The ID of the operating system (e.g., "ubuntu", "rocky", "fedora")
+    pub id: String,
+
+    /// The name of the operating system (e.g., "Ubuntu", "Windows", "macOS")
+    pub name: String,
+
+    /// The version of the operating system (e.g., "20.04", "10", "11.2")
+    pub version: String,
 }
